tests/ui/view_query_sqlite/fail/select_count_mismatch.stderr
error: query has 2 SELECT items but struct has 3 fields
  --> tests/ui/view_query_sqlite/fail/select_count_mismatch.rs:10:1
   |
10 | / #[SQLiteView(
11 | |     query(
12 | |         select(User::id, User::name),
13 | |         from(User),
14 | |     ),
15 | |     NAME = "bad_view"
16 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `SQLiteView` (in Nightly builds, run with -Z macro-backtrace for more info)
